Add sphere and cylinder primitives; center origin for all
- internal/primitives: sphere (radius 0.5), cylinder (r 0.5, h 1), shared lit shader and drawCached
- Cylinder model-space offset (0,-0.5,0) so scene position is center (raylib cylinder base at Y=0)
- assets/primitives: sphere.yaml, cylinder.yaml; default scene: cube, sphere, cylinder
- docs/ARCHITECTURE + assets/primitives/README: document cube/sphere/cylinder, default size, origin at center

--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -3,3 +3,9 @@ objects:
   - type: cube
     position: [0, 0, 0]
     scale: [1, 1, 1]
+  - type: sphere
+    position: [2.5, 0, 0]
+    scale: [1, 1, 1]
+  - type: cylinder
+    position: [-2.5, 0, 0]
+    scale: [1, 1, 1]
