--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -9,3 +9,6 @@ objects:
   - type: cylinder
     position: [-2.5, 0, 0]
     scale: [1, 1, 1]
+  - type: plane
+    position: [0, 0, -4]
+    scale: [1, 1, 1]
