Add spawn, save, newscene commands; optional scale for spawn
- spawn: cmd spawn <type> <x> <y> <z> [sx sy sz] to add primitives at runtime
- save: cmd save to write current scene to YAML
- newscene: cmd newscene to clear all objects and save empty scene
- Scene: AddObject, AddPrimitive, SaveScene, NewScene

--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -1,15 +1,10 @@
-# Scene: list of object instances. Each has type and position; scale is optional (default 1,1,1).
-# Cube, sphere, cylinder Y=0.5 so their bottom sits on the quad (plane at Y=0).
 objects:
-  - type: plane
-    position: [0, 0, 0]
-    scale: [10, 1, 10]
-  - type: cube
-    position: [0, 0.5, 0]
-    scale: [1, 1, 1]
-  - type: sphere
-    position: [2.5, 0.5, 0]
-    scale: [1, 1, 1]
-  - type: cylinder
-    position: [-2.5, 0.5, 0]
-    scale: [1, 1, 1]
+    - type: plane
+      position:
+        - 0
+        - 0
+        - 0
+      scale:
+        - 10
+        - 1
+        - 10
