--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -8,3 +8,12 @@ objects:
         - 10
         - 1
         - 10
+    - type: cube
+      position:
+        - 0
+        - 0.5
+        - 0
+      scale:
+        - 1
+        - 1
+        - 1
