--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ terminal.txt
 
 # Engine config (user preferences, generated on first toggle)
 config/
+
+# Environment (API keys; copy .env.example to .env and fill in)
+.env
