--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -1,20 +1,1 @@
-objects:
-    - type: plane
-      position:
-        - 0
-        - 0
-        - 0
-      scale:
-        - 10
-        - 1
-        - 10
-      physics: false
-    - type: cube
-      position:
-        - 0
-        - 0.5
-        - 0
-      scale:
-        - 1
-        - 1
-        - 1
+objects: []
