--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-# Copy to .env and fill in your API key(s). .env is gitignored.
+# Copy to .env and fill in your API key(s).
+# .env is in .gitignore — do NOT commit or push .env. Keep API keys local only.
 # Priority: GROQ (free) > Cursor > OpenAI. Model: cmd model <name>
 # For Groq use: cmd model llama-3.3-70b-versatile
 
