Add per-object textures, download image command, terminal paste
- ObjectInstance.Texture: optional path; scene texture cache and EnsureTexture
- Primitives: textured lit shader and DrawWithTexture for albedo texture
- cmd download image <url>: download image, apply to selected object
- Agent: run_cmd download image for LLM
- Terminal: Ctrl+V/Cmd+V paste from clipboard
- Inspector: show texture path when set

--- a/assets/scenes/default.yaml
+++ b/assets/scenes/default.yaml
@@ -1,1 +1,11 @@
-objects: []
+objects:
+    - type: plane
+      position:
+        - 0
+        - 0
+        - 0
+      scale:
+        - 20
+        - 20
+        - 20
+      physics: false
