Add Ollama as local LLM option (e.g. Qwen 3 Coder)
- internal/llm/ollama.go: Client for Ollama /api/chat
- main.go: use Ollama when no API keys set; default model qwen2.5-coder
- .env.example: document OLLAMA_BASE_URL

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # Copy to .env and fill in your API key(s).
 # .env is in .gitignore — do NOT commit or push .env. Keep API keys local only.
-# Priority: GROQ (free) > Cursor > OpenAI. Model: cmd model <name>
+# Priority: GROQ > Cursor > OpenAI > Ollama (local). Model: cmd model <name>
 # For Groq use: cmd model llama-3.3-70b-versatile
 
 GROQ_API_KEY=
 OPENAI_API_KEY=
 # CURSOR_API_KEY=
+
+# Optional: use local Ollama when no API keys are set (e.g. Qwen 3 Coder).
+# OLLAMA_BASE_URL=http://localhost:11434
