Font from Google Fonts only, generic download, terminal chat on screen
- internal/download: generic Download(url, destDir) for any file; cmd/game uses it for images
- internal/archive: Unzip + FindFontFilesInDir for zip extraction (kept for reuse)
- internal/googlefonts: fetch font by name from GitHub google/fonts API only (no user URLs)
- Font command: 'cmd font <name>' uses local fonts first, then downloads from Google Fonts by name; removed 'font url'
- Agent prompt: font by name only, no URLs; Google Fonts only
- Terminal: draw last 14 chat/log lines above input bar when open (Thinking…, Done, errors visible)
- Ollama: clearer 404 message (suggest ollama serve and ollama pull <model>)
- .gitignore: assets/fonts/downloaded/

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ config/
 
 # Environment (API keys; copy .env.example to .env and fill in)
 .env
+
+# Fonts downloaded from URL (cmd font url <url>); kept locally, not committed
+assets/fonts/downloaded/
